--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/Tony_CV.pdf",
+      "source": "/(.*).pdf",
       "headers": [
         {
           "key": "Content-Type",
@@ -9,7 +9,7 @@
         },
         {
           "key": "Content-Disposition",
-          "value": "attachment; filename=\"Tony_CV.pdf\""
+          "value": "attachment"
         }
       ]
     }
